crates/plotnik-tests/tests/02-parser/recovery_unexpected/builtin_capture_type_without_capture.txt
Text = (identifier) :: text
------------------ DIAGNOSTICS -------------------
error: capture type has no capture
 --> query.ptk:1:21
  |
1 | Text = (identifier) :: text
  |                     ^^
  |
help: capture types attach to a regular capture: `(node) @name :: text`
